Set up for 6.0.2